<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".EditBackActivity">

    <ImageView
        android:id="@+id/back_image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:contentDescription="@string/image_holder"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/back_image_container"
        app:layout_constraintStart_toStartOf="@+id/back_image_container"
        app:layout_constraintTop_toTopOf="@+id/back_image_container" />

    <ImageButton
        android:id="@+id/edit_text_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_text"
        android:scaleType="fitCenter"
        android:tint="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_text" />

    <ImageButton
        android:id="@+id/make_canvas_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/next"
        android:scaleType="fitCenter"
        android:tint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/editor_container"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:background="#c8000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="230dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/imageViewB"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/info_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarG"
                    app:srcCompat="@drawable/rgb_b" />

                <SeekBar
                    android:id="@+id/seekBarB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:max="255"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageViewSize"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarG" />

                <ImageView
                    android:id="@+id/imageViewG"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/info_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarR"
                    app:srcCompat="@drawable/rgb_g" />

                <SeekBar
                    android:id="@+id/seekBarG"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:max="255"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageViewSize"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarR" />

                <ImageView
                    android:id="@+id/imageViewR"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/info_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarSpacing"
                    app:srcCompat="@drawable/rgb_r" />

                <SeekBar
                    android:id="@+id/seekBarR"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:max="255"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageViewSize"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarSpacing" />

                <ImageView
                    android:id="@+id/imageViewSpacing"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/info_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarSize"
                    app:srcCompat="@drawable/line_height" />

                <SeekBar
                    android:id="@+id/seekBarSpacing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageViewSize"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarSize" />

                <EditText
                    android:id="@+id/edit_sample_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edit_poscard_text"
                    android:inputType="textMultiLine"
                    android:text="@string/sample_text"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBarSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:max="36"
                    android:progress="14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewSize"
                    app:layout_constraintTop_toBottomOf="@+id/edit_sample_text" />

                <ImageButton
                    android:id="@+id/ok_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarB"
                    app:srcCompat="@drawable/check" />

                <ImageView
                    android:id="@+id/imageViewSize"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/info_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_sample_text"
                    app:srcCompat="@drawable/edit_font_size" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>